[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/MenuLateralMapa/menu_lateral_mapa.gd" type="Script" id=1]
[ext_resource path="res://UI/PanelSuperior/PanelSuperiorHBox.gd" type="Script" id=2]
[ext_resource path="res://UI/PanelSuperior/PanelSuperior.gd" type="Script" id=3]
[ext_resource path="res://Resources/Temas/Tema_menu.tres" type="Theme" id=4]
[ext_resource path="res://UI/MenuLateralMapa/PanelAgregarUnidad.gd" type="Script" id=5]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MargenUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 896.0
margin_top = 3.0
margin_right = -2.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MargenUI"]
margin_right = 126.0
margin_bottom = 755.0

[node name="MenuLateralMapa" type="VBoxContainer" parent="MargenUI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_clip_content = true
custom_constants/separation = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_superior" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -128.0
margin_bottom = -732.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel_superior"]
margin_right = 896.0
margin_bottom = 36.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxPanelSuperior" type="HBoxContainer" parent="Panel_superior/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnAgregarUnidad" type="Button" parent="Panel_superior/Panel/HBoxPanelSuperior"]
margin_left = 570.0
margin_right = 679.0
margin_bottom = 36.0
text = "Agregar Unidad"

[node name="Key" type="Label" parent="Panel_superior/Panel/HBoxPanelSuperior"]
margin_left = 683.0
margin_top = 11.0
margin_right = 741.0
margin_bottom = 24.0
theme = ExtResource( 4 )
text = "faccion"

[node name="Value" type="Label" parent="Panel_superior/Panel/HBoxPanelSuperior"]
margin_left = 745.0
margin_top = 11.0
margin_right = 787.0
margin_bottom = 24.0
theme = ExtResource( 4 )
text = "value"

[node name="BtnPanelSuperior" type="Button" parent="Panel_superior/Panel/HBoxPanelSuperior"]
margin_left = 791.0
margin_right = 896.0
margin_bottom = 36.0
text = "Finalizar Turno"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelAgregarUnidad" type="Panel" parent="."]
visible = false
anchor_left = 0.228516
anchor_top = 0.339844
anchor_right = 0.733398
anchor_bottom = 0.759115
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxUnidad" type="VBoxContainer" parent="PanelAgregarUnidad"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxDescripcionUnidad" type="VBoxContainer" parent="PanelAgregarUnidad/VBoxUnidad"]
margin_top = 137.0
margin_right = 516.0
margin_bottom = 137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnCrearUnidad" type="Button" parent="PanelAgregarUnidad/VBoxUnidad"]
margin_top = 141.0
margin_right = 516.0
margin_bottom = 161.0
text = "Crear Unidad"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnCancelar" type="Button" parent="PanelAgregarUnidad/VBoxUnidad"]
margin_top = 165.0
margin_right = 516.0
margin_bottom = 185.0
text = "Cancelar"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel_superior/Panel/HBoxPanelSuperior/BtnAgregarUnidad" to="Panel_superior/Panel" method="_on_BtnAgregarUnidad_pressed"]
[connection signal="pressed" from="Panel_superior/Panel/HBoxPanelSuperior/BtnPanelSuperior" to="Panel_superior/Panel" method="_on_BtnPanelSuperior_pressed"]
[connection signal="pressed" from="PanelAgregarUnidad/VBoxUnidad/BtnCrearUnidad" to="PanelAgregarUnidad" method="_on_BtnCrearUnidad_pressed"]
[connection signal="pressed" from="PanelAgregarUnidad/VBoxUnidad/BtnCancelar" to="PanelAgregarUnidad" method="_on_BtnCancelar_pressed"]
